Use CopyOnWrite... to prevent ConcurrentExceptions
Co-authored-by: Sam Belliveau <sam.belliveau@gmail.com>